1. Метод .of [#325590]